@startuml Trip Lifecycle

[*] --> Planned : Plan Trip
Planned --> InProgress : Start Trip
InProgress --> InProgress : Log Catch
InProgress --> InProgress : Update Conditions
InProgress --> Completed : End Trip
Planned --> Cancelled : Cancel Trip
Completed --> [*]
Cancelled --> [*]

note right of InProgress
  GPS tracking active
  Catch logging enabled
  Weather monitoring
end note

note right of Completed
  Calculate statistics
  Update spot success
  Publish TripCompleted event
end note

@enduml
